# futa-admin

./: .gitignore  README.md  pyfuta.db  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/pyfuta/: main.py  pyinstaller.py
backend/src/pyfuta/app/: database.py  entrypoint.py  statements.py
backend/src/pyfuta/app/def/: reports.py
backend/src/pyfuta/app/defs/: __init__.py  pages.py  reports.py
backend/src/pyfuta/app/imports/: routes.py
backend/src/pyfuta/app/pages/: builder.py  models.py  routes.py
backend/src/pyfuta/app/report/: builder.py  dispatcher.py  models.py  routes.py
backend/src/pyfuta/app/reports/: builder.py  dispatcher.py  models.py  routes.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  app.vue  main.ts  types.ts  utils.ts
frontend/src/assets/: base.css
frontend/src/router/: index.ts
frontend/src/store/: session.ts
frontend/src/views/: page.vue
futa-web/: index.html  package-lock.json  package.json  shims.d.ts
futa-web/src/: app.vue  main.ts  router.ts  types.ts
futa-web/src/assets/: base.css
futa-web/src/components/: table.vue
futa-web/src/pages/: admin.vue  dashboard.vue  index.vue
futa-web/src/views/: report.vue
pyfuta/: main.py  pyinstaller.py
pyfuta/app/: database.py  entrypoint.py  logging.py
pyfuta/app/api/: __init__.py  imports.py  pages.py  reports.py
pyfuta/app/models/: __init__.py  page.py  report.py
pyfuta/app/utils/: dispatcher.py  executor.py
tsfuta/: package.json
tsfuta/src/: app.vue  main.ts  router.ts  types.ts
(+28 files in other folders)
